# machine-learning

./: README.md  pa1spec.txt
code/: .swo  AUTHORS  Makefile  Makefile.am  Makefile.in  PatternSet.cpp  PatternSet.h  PatternSetRef.cc  PatternSetRef.h  cancer-knn.cfg  config.status  config.txt  configure  configure.ac  glass-description.text  glass-knn.cfg  makefile  p1_driver  p1_driver.cc  p2_driver  p2_driver.cc  pa1  pa1.cpp  pa2  pa2.cpp  patterns.cc  patterns.h  something.txt  tags
code/.deps/: p1_driver.Po  p2_driver.Po  patterns.Po
code/autom4te.cache/: output.1  requests  traces.0  traces.1
example/: example-trace.txt
examplep1/: example-input.text  example-input.txt  example-trace.text
examplep2/: cancer-description.text  cancer-knn.cfg
p1_driver-1.0/: Makefile  NEWS  config.status  p1_driver  p1_driver.cc
p1_driver-1.0/p1_driver-1.0/: ChangeLog  README  configure  configure.ac  patterns.cc
p3/code/: DTreeNode.h  Makefile  Makefile.am  Makefile.in  PatternSetRef.cc  README  config.status  configure  configure.ac  p3_driver  p3_driver.cc  patterns.h  test.txt
p3/code/.deps/: p3_driver.Po  patterns.Po
p3/code/autom4te.cache/: output.0  output.1  requests  traces.0  traces.1  traces.2
p3/example/: restaurant-description.text  restaurant-dtl.cfg
p3/test/: lenses-description.text  lenses-dtl.cfg
testp1/: trace-input.text  trace-input.txt
