# -*- Autoconf -*-
#
# David Noelle - Tue Mar 31 19:12:22 PDT 2009
#
# Generated with the help of "autoscan".
#

AC_INIT([p1_driver],[1.0], [dnoelle@ucmerced.edu])
AC_CONFIG_SRCDIR([p1_driver.cc])
AM_INIT_AUTOMAKE
AC_PROG_CXX
AC_PROG_INSTALL
AC_SEARCH_LIBS([gsl_atanh], [gsl], [], [], [-lgslcblas]) 
AC_SEARCH_LIBS([gsl_blas_ddot], [gslcblas], [], [], [-lgsl]) 
AC_TYPE_SIZE_T
AC_CONFIG_FILES([Makefile])
AC_OUTPUT

